--- a/HomePage/style.css
+++ b/HomePage/style.css
@@ -8,6 +8,11 @@
     src: url("./fonts/Montserrat-Regular.ttf")
 }
 
+html {
+    margin: 0;
+    padding: 0;
+}
+
 body {
     margin: 0;
     padding: 0;
@@ -21,10 +26,21 @@ body {
     font-size: 10px;
 }
 
+header {
+    width: 100%;
+    overflow: hidden;
+    position: fixed;
+    top: 0;
+    background-color: white;
+}
+
 .header-wrapper {
     width: 100%;
 }
 
+.main {
+    margin-top: 80px;
+}
 .wrapper-center {
 
 }
@@ -39,13 +55,17 @@ body {
     height: 20px;
     margin-top: 20px;
     margin-left: 5%;
-    background-color: #008cef;
+    background-color: #008cef; 
+    /* add logo image */
 }
 
 .try-button {
-    width: 40px;
-    height: 1em;
+    width: 60px;
+    /* TODO - check real sizes later */
+    padding: 0;
+    height: 20px;
     margin-right: 5%;
+    font-size: 10px;
     float: right;
     background-color: #123e7a;
     border-width: 0px 2px 2px 0px;
