--- a/HomePage/style.css
+++ b/HomePage/style.css
@@ -153,7 +153,7 @@ header {
     margin: 0;
     padding: 0;
     min-height: 1800px;
-    background-color: #124e7a;
+    background-color: #123e7a;
 
 }
 
@@ -200,23 +200,20 @@ header {
     border-left: none;
 }
 
-.row :first-child{
+.detailed-menu .row :first-child{
     border: none;
 }
 
-.row :last-child{
+.detailed-menu .row :last-child{
 
     border-bottom: none;
     border-right: none;
     border-top: none;
 }
 
-
-
 .item-right {
     /* height: 500px;  */
     border: 2px solid #2962a1;  
-
 }
 
 .icon {
@@ -254,14 +251,91 @@ header {
 }
 
 .features-section {
-    min-height: 610px;
-    background-color: #124e7a;
+    /* min-height: 610px; */
+    background-color: #123e7a;
 }
 
-footer {
-    min-height: 180px;
+.features-section .row {
+    margin: 0;
+    padding: 0;
+    padding-top: 2px;
 }
 
+.features-section .row:first-child>div {
+    padding: 0;
+    margin: 0;
+    /* border: 2px solid black; */
+    height: 610px;
+}
+
+.features-section .row:last-child>div {
+    padding: 0;
+    margin: 0;
+    /* border: 2px solid black; */
+    height: 610px;
+    
+}
+
+.features-section .menu-icon {
+    border: 2px solid #3876cf;
+    height: 121px;
+    box-sizing: border-box;
+}
+
+.features-section .menu-icon:hover {
+    border: 3px solid #0086fb;
+}
+
+.selected-feature {
+    border: 3px solid #1cbce5;
+    height: 600px;
+    margin-top: 3px;
+    margin-left: 5px;
+    margin-right: 5px;
+    background-color: #3876cf;
+}
+
+footer .row {
+    margin: 0;
+    padding: 0;
+}
+
+footer .row .col-lg-10 {
+    display: flex;
+    height: 140px;
+    text-transform: uppercase;
+    font-size: 20px;
+    color: #2790e6;
+    font-weight: bold;
+    font-family: Montserrat;
+    /* text-align: center;
+    vertical-align: middle; */
+    justify-content: center;
+    align-items: center;
+}
+
+footer .row .col-lg-1 {
+    height: 140px;
+    display: flex;
+    text-transform: uppercase;
+    font-weight: bold;
+    font-size: 10px;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+}
+
+footer .row .col-lg-1 .glyphicon {
+    font-size: 25px;
+}
+
+footer .row .col-lg-1 a {
+    text-decoration: none;
+}
+
+footer .row .col-lg-1 a>div {
+    font-weight: bolder;
+}
 /* 
 .last-right{
     border-left: none;
