--- a/HomePage/style.css
+++ b/HomePage/style.css
@@ -110,7 +110,7 @@ header {
     /* TODO */
     /* min-height: 280px; */
     min-height: 640px;
-    background-color: black;
+    background-color: white;
 }
 
 .dandelion-menu {
@@ -152,7 +152,7 @@ header {
     /* TODO */
     margin: 0;
     padding: 0;
-    min-height: 1800px;
+    /* min-height: 1800px; */
     background-color: #123e7a;
 
 }
@@ -164,15 +164,20 @@ header {
     flex-wrap: nowrap; */
 }
 
-.middle-box {
+.before-middle-box {
+    height: 100px;
+    border: 2px solid #2962a1;
+}
+
+#middle-box {
     width: 450px;
     height: 90px;
     border: 3px solid #57a9ef;
     margin: 0 auto;
-    margin-top: 100px;
+    /* margin-top: 100px; */
     text-align: center;
     padding-top: 18px;
-    margin-bottom: 100px;
+    /* margin-bottom: 100px; */
 }
 
 .entreprice-features {
@@ -187,6 +192,11 @@ header {
     color: white;
     font-size: 12px;
     font-weight: bold;
+}
+
+.after-middle-box {
+    height: 100px;
+    border: 2px solid #2962a1;
 }
 
 .before-item{
@@ -205,7 +215,6 @@ header {
 }
 
 .detailed-menu .row :last-child{
-
     border-bottom: none;
     border-right: none;
     border-top: none;
@@ -216,9 +225,19 @@ header {
     border: 2px solid #2962a1;  
 }
 
-.icon {
+/* .icon {
     width: 100px;
     margin: 0 auto;
+} */
+
+.detailed-menu .row .icon {
+    margin: 0 auto;
+    width: 100px;
+    height: 100px;
+    background-color: #123e7a;
+    border-radius: 50%;
+    border: 4px solid #66c1ff;
+
 }
 .tree-item{
     text-align: center;
@@ -336,11 +355,11 @@ footer .row .col-lg-1 a {
 footer .row .col-lg-1 a>div {
     font-weight: bolder;
 }
+
 /* 
 .last-right{
     border-left: none;
 } */
-
 
 .wrapper-detailed-menu > .row:last-child .item-right{
     border-left: none;
