--- a/PlurarsiteDemoCore2/PlurarsiteDemoCore2/Views/Home/Index.cshtml
+++ b/PlurarsiteDemoCore2/PlurarsiteDemoCore2/Views/Home/Index.cshtml
@@ -12,4 +12,14 @@
         </div>
 
     }
+
+    @foreach (var iceCream in Model.IceCream)
+    {
+        <div>
+            <h2>@iceCream.Name</h2>
+            <h3>@iceCream.Description</h3>
+
+        </div>
+
+    }
 </body>
